--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="lib/three.js"></script>
-    <script src="lib/WebGL.js"></script>
-    <script src="lib/stats.min.js"></script>
-    <script src="lib/controls/PointerLockControls.js"></script>
-    <script src="lib/loaders/OBJLoader.js"></script>
-    <script src="lib/loaders/GLTFLoader.js"></script>
-    <script src="lib/loaders/FBXLoader.js"></script>
-    <script src="lib/loaders/MTLLoader.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/three.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/WebGL.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/stats.min.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/controls/PointerLockControls.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/OBJLoader.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/GLTFLoader.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/FBXLoader.js"></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/MTLLoader.js"></script>
 
     <script src="js/app.js" defer></script>
 
