--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/FBXLoader.js"></script>
     <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/MTLLoader.js"></script>
 
-    <script src="js/app.js" defer></script>
+    <script src="https://github.com/AndriusBos/MazeGame/blob/master/js/app.js" defer></script>
 
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
+    <link href="https://github.com/AndriusBos/MazeGame/blob/master/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
