--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Computer Graphics</title>
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/three.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/WebGL.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/stats.min.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/controls/PointerLockControls.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/OBJLoader.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/GLTFLoader.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/FBXLoader.js"></script>
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/lib/loaders/MTLLoader.js"></script>
+    <script src="lib/three.js"></script>
+    <script src="lib/WebGL.js"></script>
+    <script src="lib/stats.min.js"></script>
+    <script src="lib/controls/PointerLockControls.js"></script>
+    <script src="lib/loaders/OBJLoader.js"></script>
+    <script src="lib/loaders/GLTFLoader.js"></script>
+    <script src="lib/loaders/FBXLoader.js"></script>
+    <script src="lib/loaders/MTLLoader.js"></script>
 
-    <script src="https://github.com/AndriusBos/MazeGame/blob/master/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
 
-    <link href="https://github.com/AndriusBos/MazeGame/blob/master/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
