--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="lib/three.js"></script>
-    <script src="lib/WebGL.js"></script>
-    <script src="lib/stats.min.js"></script>
-    <script src="lib/controls/PointerLockControls.js"></script>
-    <script src="lib/loaders/OBJLoader.js"></script>
-    <script src="lib/loaders/GLTFLoader.js"></script>
-    <script src="lib/loaders/FBXLoader.js"></script>
-    <script src="lib/loaders/MTLLoader.js"></script>
+    <script src="/lib/three.js"></script>
+    <script src="/lib/WebGL.js"></script>
+    <script src="/lib/stats.min.js"></script>
+    <script src="/lib/controls/PointerLockControls.js"></script>
+    <script src="/lib/loaders/OBJLoader.js"></script>
+    <script src="/lib/loaders/GLTFLoader.js"></script>
+    <script src="/lib/loaders/FBXLoader.js"></script>
+    <script src="/lib/loaders/MTLLoader.js"></script>
 
-    <script src="js/app.js" defer></script>
+    <script src="/js/app.js" defer></script>
 
     <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
