--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="/lib/three.js"></script>
-    <script src="/lib/WebGL.js"></script>
-    <script src="/lib/stats.min.js"></script>
-    <script src="/lib/controls/PointerLockControls.js"></script>
-    <script src="/lib/loaders/OBJLoader.js"></script>
-    <script src="/lib/loaders/GLTFLoader.js"></script>
-    <script src="/lib/loaders/FBXLoader.js"></script>
-    <script src="/lib/loaders/MTLLoader.js"></script>
+    <script src="lib/three.js"></script>
+    <script src="lib/WebGL.js"></script>
+    <script src="lib/stats.min.js"></script>
+    <script src="lib/controls/PointerLockControls.js"></script>
+    <script src="lib/loaders/OBJLoader.js"></script>
+    <script src="lib/loaders/GLTFLoader.js"></script>
+    <script src="lib/loaders/FBXLoader.js"></script>
+    <script src="lib/loaders/MTLLoader.js"></script>
 
-    <script src="/js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
 
     <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
@@ -26,26 +26,26 @@
 
         <!-- Meniu -->
         <div id="meniu">
-            <div id="GameName"><img src="http://127.0.0.1:8080/game_name_s.png"></div><br><br>
-            <input type="image" src="http://127.0.0.1:8080/game_button_play.png" id="PLAY"><br><br>
-            <input type="image" src="http://127.0.0.1:8080/game_button_about.png" width="250" id="INSTRUCTION" onclick="goToInstruction()"></br></br>
-            <input type="image" src="http://127.0.0.1:8080/game_button_options.png" width="250" id="OPTIONS" onclick="goToOptions()"></br></br>
+            <div id="GameName"><img src="local/game_name_s.png"></div><br><br>
+            <input type="image" src="local/game_button_play.png" id="PLAY"><br><br>
+            <input type="image" src="local/game_button_about.png" width="250" id="INSTRUCTION" onclick="goToInstruction()"></br></br>
+            <input type="image" src="local/game_button_options.png" width="250" id="OPTIONS" onclick="goToOptions()"></br></br>
         </div>
 
         <!-- Instrukcija -->
         <div id="instrukcija">
-            <img src="http://127.0.0.1:8080/game_button_about.png"><br /><br />
+            <img src="local/game_button_about.png"><br /><br />
             Controls - W, A, S, D and mouse. </br></br>
             SHIFT - run</br></br>
 
             The goal of the game is to find a way out. <br /><br />
             Just be sure to watch out for ghosts ..<br /><br />
-            <input type="image" src="http://127.0.0.1:8080/game_button_back.png" width="250" onclick="backToMeniu()"><br><br>
+            <input type="image" src="local/game_button_back.png" width="250" onclick="backToMeniu()"><br><br>
         </div>
 
         <!-- Nustatymai -->
         <div id="options">
-            <img src="http://127.0.0.1:8080/game_button_options.png"><br /><br />
+            <img src="local/game_button_options.png"><br /><br />
             <label id="options_text">
                 video graphics
             </label><br><br>
@@ -64,17 +64,17 @@
                 <span class="slider round"></span>
             </label><br><br>
 
-            <input type="image" src="http://127.0.0.1:8080/game_button_back.png" width="250" onclick="backToMeniu()"><br><br>
+            <input type="image" src="local/game_button_back.png" width="250" onclick="backToMeniu()"><br><br>
         </div>
 
     </div>
 
     <div id="lifecount">
-        <img id="life_5" src="http://127.0.0.1:8080/heart.png" width="50" />
-        <img id="life_4" src="http://127.0.0.1:8080/heart.png" width="50" />
-        <img id="life_3" src="http://127.0.0.1:8080/heart.png" width="50" />
-        <img id="life_2" src="http://127.0.0.1:8080/heart.png" width="50" />
-        <img id="life_1" src="http://127.0.0.1:8080/heart.png" width="50" />
+        <img id="life_5" src="local/heart.png" width="50" />
+        <img id="life_4" src="local/heart.png" width="50" />
+        <img id="life_3" src="local/heart.png" width="50" />
+        <img id="life_2" src="local/heart.png" width="50" />
+        <img id="life_1" src="local/heart.png" width="50" />
     </div>
     <div id="red"></div>
 
