--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    <script src="lib/three.js"></script>
+    <script src="https://github.com/mrdoob/three.js/blob/dev/build/three.js"></script>
     <script src="lib/WebGL.js"></script>
     <script src="lib/stats.min.js"></script>
     <script src="lib/controls/PointerLockControls.js"></script>
