--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <!-- Libraries -->
-    script src="lib/three.js"></script>
+    <script src="lib/three.js"></script>
     <script src="lib/WebGL.js"></script>
     <script src="lib/stats.min.js"></script>
     <script src="lib/controls/PointerLockControls.js"></script>
@@ -22,7 +22,7 @@
 
 <body>
 
-    <div id="blocker" style="background-image: url('http://127.0.0.1:8080/bg.jpg');">
+    <div id="blocker" style="background-image: url('local/bg.jpg');">
 
         <!-- Meniu -->
         <div id="meniu">
