--- a/lose.html
+++ b/lose.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="bg">
-        <img id="medal" src="http://127.0.0.1:8080/sad_face.png" width="350" />
+        <img id="medal" src="local/sad_face.png" width="350" />
         <div class="gametext">
             gameover <br />
             Maybe try again?
         </div>
         <div class="button">
-            <a href="file:///E:/Game/index.html">
-                <img border="0" alt="W3Schools" src="http://127.0.0.1:8080/game_button_play_again.png">
+            <a href="local/index.html">
+                <img border="0" src="local/game_button_play_again.png">
             </a>
         </div>
     </div>
