--- a/winner.html
+++ b/winner.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="bg">
-        <img id="medal" src="http://127.0.0.1:8080/medalis.png" />
+        <img id="medal" src="local/medalis.png" />
         <div class="gametext">
             congratulations <br />
             you won!
         </div>
         <div class="button">
-            <a href="file:///E:/Game/index.html">
-                <img border="0" alt="W3Schools" src="http://127.0.0.1:8080/game_button_play_again.png">
+            <a href="local/index.html">
+                <img border="0" src="http://127.0.0.1:8080/game_button_play_again.png">
             </a>
         </div>
     </div>
