--- a/winner.html
+++ b/winner.html
@@ -15,7 +15,7 @@
             you won!
         </div>
         <div class="button">
-            <a href="local/index.html">
+            <a href="index.html">
                 <img border="0" src="http://127.0.0.1:8080/game_button_play_again.png">
             </a>
         </div>
