--- a/lose.html
+++ b/lose.html
@@ -15,7 +15,7 @@
             Maybe try again?
         </div>
         <div class="button">
-            <a href="local/index.html">
+            <a href="index.html">
                 <img border="0" src="local/game_button_play_again.png">
             </a>
         </div>
