--- a/winner.html
+++ b/winner.html
@@ -16,7 +16,7 @@
         </div>
         <div class="button">
             <a href="index.html">
-                <img border="0" src="http://127.0.0.1:8080/game_button_play_again.png">
+                <img border="0" src="local/game_button_play_again.png">
             </a>
         </div>
     </div>
